// Arca WireGuard Network Service Protocol
// gRPC API for WireGuard-based container networking

syntax = "proto3";

package arca.wireguard.v1;

option go_package = "github.com/vas-solutus/arca-wireguard-service/proto";

// WireGuardService manages WireGuard hubs and peer connections for container networking
// Runs on vsock port 51820 in container's init system namespace
service WireGuardService {
    // Add a network to this container (creates wgN interface + veth pair, renames to ethN)
    // For multi-network: network_index=0 → wg0/eth0, network_index=1 → wg1/eth1, etc.
    rpc AddNetwork(AddNetworkRequest) returns (AddNetworkResponse);

    // Remove a network from this container (deletes wgN interface and ethN)
    rpc RemoveNetwork(RemoveNetworkRequest) returns (RemoveNetworkResponse);

    // Add a peer to a WireGuard interface (for full mesh networking)
    rpc AddPeer(AddPeerRequest) returns (AddPeerResponse);

    // Remove a peer from a WireGuard interface
    rpc RemovePeer(RemovePeerRequest) returns (RemovePeerResponse);

    // Get WireGuard status and statistics
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);

    // Get container's vmnet endpoint (eth0 IP:port) for peer configuration
    rpc GetVmnetEndpoint(GetVmnetEndpointRequest) returns (GetVmnetEndpointResponse);

    // Publish a port (create DNAT rule for host port → container port)
    rpc PublishPort(PublishPortRequest) returns (PublishPortResponse);

    // Unpublish a port (remove DNAT rule)
    rpc UnpublishPort(UnpublishPortRequest) returns (UnpublishPortResponse);

    // Dump nftables state for debugging (returns full ruleset with counters)
    rpc DumpNftables(DumpNftablesRequest) returns (DumpNftablesResponse);
}

// Request to add a network to the container
message AddNetworkRequest {
    // Network ID (Docker network ID)
    string network_id = 1;

    // Network index (0 for first network → wg0/eth0, 1 for second → wg1/eth1, etc.)
    uint32 network_index = 2;

    // Private key for this container's WireGuard interface (Base64-encoded Curve25519 key)
    // Each wgN interface gets its own private key
    string private_key = 3;

    // Listen port for WireGuard (51820 + network_index)
    uint32 listen_port = 4;

    // Peer endpoint (peer's vmnet IP address, e.g., "192.168.65.5:51820")
    string peer_endpoint = 5;

    // Peer's public key (Base64-encoded)
    string peer_public_key = 6;

    // IP address for this container on this network
    string ip_address = 7;

    // Network CIDR for routing (e.g., "172.18.0.0/16")
    string network_cidr = 8;

    // Gateway IP for this network (e.g., "172.18.0.1")
    string gateway = 9;

    // Host IP address for host.docker.internal DNS resolution (e.g., "192.168.2.100")
    // This is the macOS host's LAN IP, allowing containers to reach host services
    string host_ip = 10;
}

message AddNetworkResponse {
    // Success status
    bool success = 1;

    // Error message if success = false
    string error = 2;

    // Number of networks now configured
    uint32 total_networks = 3;

    // WireGuard interface name created (wg0, wg1, wg2, etc.)
    string wg_interface = 4;

    // Container interface name (eth0, eth1, eth2, etc.)
    string eth_interface = 5;

    // Public key for this interface (for peer configuration)
    string public_key = 6;
}

// Request to remove a network from the container
message RemoveNetworkRequest {
    // Network ID to remove
    string network_id = 1;

    // Network index (0, 1, 2, etc.) - identifies which wgN/ethN to remove
    uint32 network_index = 2;
}

message RemoveNetworkResponse {
    // Success status
    bool success = 1;

    // Error message if success = false
    string error = 2;

    // Number of networks still configured
    uint32 remaining_networks = 3;
}

// Request WireGuard status
message GetStatusRequest {
    // No parameters needed
}

message GetStatusResponse {
    // Service version
    string version = 1;

    // Number of networks configured
    uint32 network_count = 2;

    // WireGuard interface statuses (one per wgN interface)
    repeated InterfaceStatus interfaces = 3;

    // Peer statistics (one per peer, grouped by interface)
    repeated PeerStatus peers = 4;
}

message InterfaceStatus {
    // Network ID this interface represents
    string network_id = 1;

    // Interface name (wg0, wg1, wg2, etc.)
    string name = 2;

    // Public key for this interface
    string public_key = 3;

    // Listen port
    uint32 listen_port = 4;

    // IP addresses assigned to interface
    repeated string ip_addresses = 5;
}

message PeerStatus {
    // Network ID this peer represents
    string network_id = 1;

    // Interface name this peer belongs to (wg0, wg1, wg2, etc.)
    string interface_name = 2;

    // Peer public key
    string public_key = 3;

    // Peer endpoint (IP:port)
    string endpoint = 4;

    // Allowed IPs for this peer
    repeated string allowed_ips = 5;

    // Latest handshake timestamp (Unix seconds, 0 if never)
    uint64 latest_handshake = 6;

    // Transfer statistics
    TransferStats stats = 7;
}

message TransferStats {
    // Bytes received from this peer
    uint64 bytes_received = 1;

    // Bytes sent to this peer
    uint64 bytes_sent = 2;

    // Persistent keepalive interval (seconds, 0 if disabled)
    uint32 persistent_keepalive = 3;
}

// Request for vmnet endpoint information
message GetVmnetEndpointRequest {
    // No parameters needed
}

message GetVmnetEndpointResponse {
    // Success status
    bool success = 1;

    // Error message if success = false
    string error = 2;

    // vmnet endpoint (eth0 IP:port, e.g., "192.168.65.5:51820")
    string endpoint = 3;
}

// Request to add a peer to a WireGuard interface
message AddPeerRequest {
    // Network ID this peer belongs to
    string network_id = 1;

    // Network index (which wgN interface to add peer to)
    uint32 network_index = 2;

    // Peer's WireGuard public key (Base64-encoded)
    string peer_public_key = 3;

    // Peer's vmnet endpoint (IP:port, e.g., "192.168.65.5:51820")
    string peer_endpoint = 4;

    // Peer's overlay IP address (for allowed-ips routing, e.g., "172.18.0.3")
    string peer_ip_address = 5;

    // Peer's container name (for DNS resolution, e.g., "web1")
    string peer_name = 6;

    // Peer's container ID (Docker ID, for logging/debugging)
    string peer_container_id = 7;

    // Peer's DNS aliases (additional names that resolve to this IP)
    repeated string peer_aliases = 8;
}

message AddPeerResponse {
    // Success status
    bool success = 1;

    // Error message if success = false
    string error = 2;

    // Total number of peers on this interface
    uint32 total_peers = 3;
}

// Request to remove a peer from a WireGuard interface
message RemovePeerRequest {
    // Network ID this peer belongs to
    string network_id = 1;

    // Network index (which wgN interface to remove peer from)
    uint32 network_index = 2;

    // Peer's WireGuard public key to remove (Base64-encoded)
    string peer_public_key = 3;

    // Peer's container name (for DNS entry removal)
    string peer_name = 4;
}

message RemovePeerResponse {
    // Success status
    bool success = 1;

    // Error message if success = false
    string error = 2;

    // Remaining number of peers on this interface
    uint32 remaining_peers = 3;
}

// Request to publish a port (expose container port on host)
message PublishPortRequest {
    // Protocol ("tcp" or "udp")
    string protocol = 1;

    // Host port (port on vmnet interface that macOS host will connect to)
    uint32 host_port = 2;

    // Container overlay IP address (WireGuard IP, e.g., "172.18.0.2")
    string container_ip = 3;

    // Container port (port inside container to DNAT to)
    uint32 container_port = 4;
}

message PublishPortResponse {
    // Success status
    bool success = 1;

    // Error message if success = false
    string error = 2;
}

// Request to unpublish a port (remove port exposure)
message UnpublishPortRequest {
    // Protocol ("tcp" or "udp")
    string protocol = 1;

    // Host port to unpublish
    uint32 host_port = 2;
}

message UnpublishPortResponse {
    // Success status
    bool success = 1;

    // Error message if success = false
    string error = 2;
}

// Request to dump nftables state for debugging
message DumpNftablesRequest {
    // No parameters needed
}

message DumpNftablesResponse {
    // Success status
    bool success = 1;

    // Error message if success = false
    string error = 2;

    // Full nftables ruleset output (from 'nft list ruleset')
    // Includes all tables, chains, rules, and packet counters
    string ruleset = 3;
}
